--- a/Servidor/LoginPdfsScandir/public/css/indexCSS.css
+++ b/Servidor/LoginPdfsScandir/public/css/indexCSS.css
@@ -7,20 +7,21 @@
 
 body {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #1a1a1a;
     padding: 20px;
     color: #e0e0e0;
 }
 
+h1 {
+    text-align: center;
+    margin-top: 5rem;
+}
+
 .container {
-    width: 100%;
-    max-width: 800px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
+    margin: 2rem;
 }
 
 .form-container {
@@ -30,6 +31,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    min-height: min-content;
 }
 
 h2 {
