--- a/Servidor/LoginPdfsScandir/public/css/paginaUsuarioCss.css
+++ b/Servidor/LoginPdfsScandir/public/css/paginaUsuarioCss.css
@@ -40,7 +40,13 @@ form:first-of-type {
     background: lightseagreen;
 }
 
-form:last-of-type {
+form:nth-of-type(2) {
     margin-top: 2rem;
     background: lightblue;
+}
+
+form:last-of-type {
+    margin-top: 2rem;
+    background: lightcoral;
+    padding: 1rem;
 }
