añadir funciones: crear copia de fichero eliminar fichero

--- a/Servidor/LoginPdfsScandir/public/css/paginaUsuarioCss.css
+++ b/Servidor/LoginPdfsScandir/public/css/paginaUsuarioCss.css
@@ -50,3 +50,17 @@ form:last-of-type {
     background: lightcoral;
     padding: 1rem;
 }
+
+input[type=submit] {
+    width: min-content;
+    height: 2rem;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 1rem;
+}
+
+ul form {
+    background: white !important;
+}
