--- a/Diseño Intefaces/tema3/Ej9/style.css
+++ b/Diseño Intefaces/tema3/Ej9/style.css
@@ -1,3 +1,9 @@
+h1 {
+    background: linear-gradient(purple, violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 section {
     margin: 1rem auto;
     width: 90%;
