subir tarea DOM1V2 T5

--- a/Cliente/T5/DOM_1V2/view/ej2y3.html
+++ b/Cliente/T5/DOM_1V2/view/ej2y3.html
@@ -11,15 +11,10 @@
     <p>
         Lorem fistrum ese que llega no te digo trigo por no llamarte Rodrigor llevame al sircoo se calle ustée. Amatomaa
         jarl va usté muy cargadoo qué dise usteer a gramenawer no te digo trigo por no llamarte Rodrigor.
-
-        Va usté muy cargadoo al ataquerl diodeno no puedor a wan no te digo trigo por no llamarte Rodrigor te voy a
-        borrar el cerito la caidita caballo blanco caballo negroorl de la pradera a peich. Pecador torpedo sexuarl te
-        voy a borrar el cerito.
     </p>
 
-    <button>Mostrar resto del contenido</button>
-
-    <script src="./script.js"></script>
+    <button id="cutTextBtn">Cortar texto por la mitad</button>
+    <script src="../js/ej2y3.js"></script>
 </body>
 
 </html>
