--- a/Cliente/T5/DOM_1V2/view/ej4.html
+++ b/Cliente/T5/DOM_1V2/view/ej4.html
@@ -9,14 +9,12 @@
 
 <body>
     <form action="">
-        <input type="text" name="" id="">
-        <input type="submit" value="Agregar">
+        <input type="text" placeholder="add item to list" required>
+        <input type="submit" value="Add">
     </form>
+    <ul></ul>
 
-    <h3>Lista de elementos</h3>
-    <ul>
-
-    </ul>
+    <script src="../js/ej4.js"></script>
 </body>
 
 </html>
