un poquico de todo

--- a/Diseno_Interfaces/tema7/Proyecto1-Tema7/css/style.css
+++ b/Diseno_Interfaces/tema7/Proyecto1-Tema7/css/style.css
@@ -133,3 +133,8 @@ a:hover {
 .bg-second-alpha-color {
    background: var(--second-alpha-color);
 }
+
+/* CONTACTO */
+.carousel-caption {
+   z-index: 10;
+}
