--- a/Cliente/React/PracticandoReactRouterDOM/src/index.css
+++ b/Cliente/React/PracticandoReactRouterDOM/src/index.css
@@ -2,6 +2,11 @@ img {
    width: 10%;
 }
 
+a {
+   color: black;
+   text-decoration: none;
+}
+
 article {
    border: 1px solid black;
 }
@@ -11,10 +16,9 @@ h1 {
    font-size: small;
 }
 
-.spinner{
+.spinner {
    animation: spin 2s linear infinite;
    font-size: xx-large;
-
 }
 
 @keyframes spin {
@@ -25,4 +29,3 @@ h1 {
       transform: rotate(360deg);
    }
 }
-
